# CS450

./: .gitignore  README.md  TALKING_POINTS.md  backup_chat.py  cs450-tutor.yml  db_helper.py  main.py  ollama.yml  pyproject.toml
.langrepl/: config.approval.json  config.mcp.json  config.server.yml
.langrepl/agents/: cs450-tutor.yml
.langrepl/cache/mcp/: chroma.json
.langrepl/llms/: openai.yml
.langrepl/prompts/agents/: cs450_tutor.md
chromadb/: chroma.sqlite3
