[project]
name = "cs450"
version = "0.1.0"
description = "Qwen based chatbot for CS 450"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "langchain",
    "langchain-ollama",
    "langchain-huggingface",
    "langchain-chroma",
    "chromadb",
    "pypdf",
    "transformers",
    "sentence-transformers"
]
